# ml-gqa-transformer

./: .gitignore  README.md  pyproject.toml  requirements.txt
exp/: exp_optimal_gqa.ipynb  exp_pos.ipynb
src/: attention_layers.py  decoder.py  encoder.py  find_optimal_group.py  positional_encoding.py  transformer.py
